<resources>
    <string name="app_name">kamalpanditpatil</string>
    <string name="title_activity_admin_main_menu">AdminMainMenu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!--user Strings-->
    <string name="ATTENDANCE">ATTENDANCE</string>
    <string name="PRODUCTION">PRODUCTION</string>
    <string name="EDITING">EDITING</string>
    <string name="REGISTRATION">REGISTRATION</string>
    <string name="ECONOMICS">ECONOMICS</string>
    <string name="login">Login</string>
    <string name="title_activity_production_admin_menu">productionAdminMenuActivity</string>
    <string name="title_activity_production_main_menu">ProductionMainMenu</string>
    <string name="GRINDING">GRINDING</string>
    <string name="CASING">CASING</string>
    <string name="CNC">CNC</string>
    <string name="Q_AND_A">Q AND A</string>
    <string-array name="Casing">
        <item>4_half_inch</item>
        <item>4_inch</item>
        <item>5_inch</item>
        <item>6_inch</item>
        <item>7_inch</item>
        <item>8_inch</item>
        <item>9_inch</item>
        <item>10_inch</item>
        <item>12_inch</item>
    </string-array>
    <string-array name="CNC">
        <item>1_inch_coupler</item>
        <item>1_quarter_inch_coupler</item>
        <item>1_half_inch_coupler</item>
        <item>2_inch_coupler</item>
        <item>2_half_inch_coupler</item>
        <item>3_inch_coupler</item>
        <item>4_inch_coupler</item>
        <item>4_inch_coupler sample</item>
        <item>1_inch_pipe</item>
        <item>1_quarter_inch_pipe</item>
        <item>1_half_inch_pipe</item>
        <item>2 inch_pipe</item>
        <item>2_half_inch_pipe</item>
        <item>3_inch_pipe</item>
        <item>4_inch_pipe</item>
        <item>4_inch_pipe sample</item>
    </string-array>

    <string name="submit">SUBMIT</string>
    <string name="enterProduction">ENTER  PRODUCTION HERE</string>
    <string name="title_activity_attendance_base">AttendanceBaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_attendance_base">AdminAttendanceBaseActivity</string>
</resources>
