<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_admin_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="HOME" />
    <item
        android:id="@+id/navigation_admin_editing"
        android:icon="@drawable/ic_portrait_black_24dp"
        android:title="@string/EDITING" />

    <item
        android:id="@+id/navigation_admin_production"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/PRODUCTION" />

    <item
        android:id="@+id/navigation__admin_attendance"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/ATTENDANCE" />
    <item
        android:id="@+id/navigation_economics"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        android:title="@string/ECONOMICS"/>

</menu>